--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "dependencies": {
         "@securecodebox/securecodebox-worker": "0.0.5",
         "lodash": "^4.17.4",
-        "node-nmap": "^4.0.0"
+        "node-nmap": "^4.0.0",
+        "uuid": "^3.2.1"
     },
     "devDependencies": {
         "jest": "^22.0.4"
