--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
         "url": "git@github.com:secureCodeBox/scanner-infrastructure-nmap.git"
     },
     "dependencies": {
-        "@securecodebox/scanner-scaffolding": "0.1.1",
-        "lodash": "^4.17.4",
+        "@securecodebox/scanner-scaffolding": "^0.1.5",
+        "lodash": "^4.17.5",
         "node-nmap": "^4.0.0",
         "uuid": "^3.2.1"
     },
