--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,11 @@
 language: node_js
 node_js:
   - "8"
+services:
+  - docker
+jobs:
+  include:
+    - stage: test
+      script: npm test
+    - stage: build docker image
+      script: docker build -t nmap .
