--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ jobs:
     - stage: test
       script: npm test
     - stage: build docker image
+      if: branch IN (master, develop)
       services:
       - docker
       script:
