--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,16 @@ jobs:
     - stage: build docker image
       if: branch IN (master, develop) AND type NOT pull_request
       services:
-      - docker
+        - docker
       script:
-      - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
-      - docker build -t securecodebox/nmap:oss --build-arg=COMMIT_ID=$TRAVIS_COMMIT --build-arg=BRANCH=$TRAVIS_BRANCH --build-arg=REPOSITORY_URL="https://github.com/secureCodeBox/scanner-infrastructure-nmap" .
-      - docker images
-      - docker push securecodebox/nmap:oss
+        - export REPO=securecodebox/nmap
+        - export TAG=$TRAVIS_BRANCH
+        - echo -en "travis_fold:start:Docker_Build\r"
+        - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
+        - docker build -t $REPO:$TAG --build-arg=COMMIT_ID=$TRAVIS_COMMIT --build-arg=BRANCH=$TRAVIS_BRANCH --build-arg=REPOSITORY_URL="https://github.com/secureCodeBox/scanner-infrastructure-nmap" .
+        - docker tag $REPO:$TAG $REPO:oss;
+        - docker tag $REPO:$TAG $REPO:latest;
+        - docker tag $REPO:$TAG $REPO:$TRAVIS_BUILD_NUMBER;
+        - docker images
+        - echo -en "travis_fold:end:Docker_Build\r"
+        - docker push $REPO
