--- a/.eslintrc
+++ b/.eslintrc
@@ -6,10 +6,7 @@
         "jest": true
     },
     "parserOptions": {
-        "ecmaVersion": 2017,
-        "ecmaFeatures": {
-            "experimentalObjectRestSpread": true
-        }
+        "ecmaVersion": 2018
     },
     "extends": "eslint:recommended",
     "plugins": ["prettier"],
