--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "dependencies": {
         "@securecodebox/scanner-scaffolding": "^2.2.1",
         "lodash": "^4.17.11",
-        "uuid": "^3.3.2"
+        "uuid": "^3.3.2",
+        "xml2js": "^0.4.19"
     },
     "devDependencies": {
         "eslint": "^5.16.0",
