--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -2,13 +2,9 @@ name-template: 'v$NEXT_PATCH_VERSION'
 tag-template: 'v$NEXT_PATCH_VERSION'
 categories:
     - title: '🚀 Features'
-      labels:
-          - 'feature'
-          - 'enhancement'
+      label: 'enhancement'
     - title: '🐛 Bug Fixes'
-      labels:
-          - 'fix'
-          - 'bug'
+      label: 'bug'
     - title: '🔧 Maintenance'
       label: 'maintenance'
     - title: '🧪 Test'
